--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.takisoft.fix:preference-v7:25.3.0.0'
     implementation files('libs\\LeonidsLib-1.3.2.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
