--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.takisoft.fix:preference-v7:25.3.0.0'
     implementation files('libs\\LeonidsLib-1.3.2.jar')
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'com.github.Amit7474:Dolly-SharedPreferences:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
