--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.github.Amit7474:Dolly-SharedPreferences:1.0.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 }
